[package]
name = "gbx"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"
description = "A (incomplete) GameBox (.Gbx) file reader and writer for Trackmania (2020)"
repository = "https://github.com/jussyDr/gbx"
license = "GPL-2.0"
keywords = ["gamebox", "trackmania"]
categories = ["encoding", "parser-implementations"]

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true

[dependencies]
indexmap = "1.9.2"
int-enum = { git = "https://github.com/jussyDr/int-enum" }
lzo1x = { git = "https://github.com/jussyDr/lzo1x" }
quick-xml = "0.27.1"
serde = { version = "1.0.152", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.4.0"
paste = "1.0.11"
test-util = { path = "tests/test-util" }

[package.metadata.docs.rs]
features = ["serde"]
