[package]
name = "gbx"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"
description = "A (incomplete) GameBox (.Gbx) file reader and writer for Trackmania (2020)"
repository = "https://github.com/jussyDr/gbx"
license = "GPL-2.0"
keywords = ["gamebox", "trackmania"]
categories = ["encoding", "parser-implementations"]

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true

[dependencies]
indexmap = "1.9.2"
libz-sys = "1.1.8"
lzo1x-1 = "0.1.0"
num_enum = "0.5.9"
quick-xml = "0.27.1"
serde = { version = "1.0.152", features = ["derive"], optional = true }
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
criterion = "0.4.0"
paste = "1.0.11"
test-util = { path = "tests/test-util" }

[package.metadata.docs.rs]
features = ["serde"]
